outputs_20260401-034034-fcfb66f3/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\src\gtm_tom_3_phase_inverter_pwm.c:17:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Tom_Timer.h:17:34: error: conflicting types for 'IfxGtm_Tom_ToutMap'; have 'struct <anonymous>'
   17 | typedef struct { uint32 dummy; } IfxGtm_Tom_ToutMap;
      |                                  ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\src\gtm_tom_3_phase_inverter_pwm.c:16:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Pwm.h:15:34: note: previous declaration of 'IfxGtm_Tom_ToutMap' with type 'IfxGtm_Tom_ToutMap'
   15 | typedef struct { uint32 dummy; } IfxGtm_Tom_ToutMap;
      |                                  ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Tom_Timer.h:21:37: error: conflicting types for 'Ifx_GTM_TOM'; have 'struct <anonymous>'
   21 | typedef struct { uint32 reserved; } Ifx_GTM_TOM;
      |                                     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Pwm.h:10:37: note: previous declaration of 'Ifx_GTM_TOM' with type 'Ifx_GTM_TOM'
   10 | typedef struct { uint32 reserved; } Ifx_GTM_TOM;
      |                                     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\src\gtm_tom_3_phase_inverter_pwm.c:21:10: fatal error: IfxPort_Pinmap.h: No such file or directory
   21 | #include "IfxPort_Pinmap.h"
      |          ^~~~~~~~~~~~~~~~~~
compilation terminated.

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:6:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Tom_Timer.h:17:34: error: conflicting types for 'IfxGtm_Tom_ToutMap'; have 'struct <anonymous>'
   17 | typedef struct { uint32 dummy; } IfxGtm_Tom_ToutMap;
      |                                  ^~~~~~~~~~~~~~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Pwm.h:15:34: note: previous declaration of 'IfxGtm_Tom_ToutMap' with type 'IfxGtm_Tom_ToutMap'
   15 | typedef struct { uint32 dummy; } IfxGtm_Tom_ToutMap;
      |                                  ^~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Tom_Timer.h:21:37: error: conflicting types for 'Ifx_GTM_TOM'; have 'struct <anonymous>'
   21 | typedef struct { uint32 reserved; } Ifx_GTM_TOM;
      |                                     ^~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_di53ei7y\include/IfxGtm_Pwm.h:10:37: note: previous declaration of 'Ifx_GTM_TOM' with type 'Ifx_GTM_TOM'
   10 | typedef struct { uint32 reserved; } Ifx_GTM_TOM;
      |                                     ^~~~~~~~~~~
